--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>word-count</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
   <build>
     <plugins>
       <plugin>
